--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Idle Tycoon Hub</h1>
-      <p>The ultimate hub for Idle Tycoon games and mods.</p>
+      <p>The ultimate hub for Idle Tycoon & Modded Games.</p>
     </div>
   </section>
 
@@ -131,33 +131,41 @@
       <!-- Idle Miner -->
       <div class="game-card">
         <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
-        <h3>Idle Miner Tycoon</h3>
-        <p>Build your mining empire and earn cash while offline. Grow faster with unlimited fun!</p>
+        <h3>Idle Miner Tycoon (Mod)</h3>
+        <p>Build your mining empire and earn cash while offline. ⚡ This modded version adds unlimited money every time you buy!</p>
         <a class="download-btn" href="https://appslocked.com/cl/i/qk7gn4" target="_blank">Download</a>
       </div>
 
       <!-- Prison Tycoon -->
       <div class="game-card">
         <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
-        <h3>Prison Empire Tycoon</h3>
-        <p>Manage your prison, expand facilities and become the ultimate prison tycoon manager.</p>
+        <h3>Prison Empire Tycoon (Mod)</h3>
+        <p>Manage your prison, expand facilities and become the ultimate prison tycoon. ⚡ This version gives extra money whenever you spend!</p>
         <a class="download-btn" href="https://appverification.net/cl/i/xpvvkj" target="_blank">Download</a>
       </div>
 
       <!-- Idle Police Tycoon -->
       <div class="game-card">
         <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
-        <h3>Idle Police Tycoon</h3>
-        <p>Control the police department, solve crimes, and keep your city safe in this idle adventure.</p>
+        <h3>Idle Police Tycoon (Mod)</h3>
+        <p>Control the police department and solve crimes. ⚡ In this hacked version, you get more money with every purchase.</p>
         <a class="download-btn" href="https://appinstallcheck.com/cl/i/1x55kk" target="_blank">Download</a>
       </div>
 
       <!-- Idle Barber Shop Tycoon -->
       <div class="game-card">
         <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
-        <h3>Idle Barber Shop Tycoon</h3>
-        <p>Run your own barbershop, style customers and grow your hair-cutting business empire.</p>
+        <h3>Idle Barber Shop Tycoon (Mod)</h3>
+        <p>Run your own barbershop and style customers. ⚡ Modded to give you extra money every time you buy new items.</p>
         <a class="download-btn" href="https://appverification.net/cl/i/o4xxd4" target="_blank">Download</a>
+      </div>
+
+      <!-- GTA San Andreas -->
+      <div class="game-card">
+        <img src="https://raw.githubusercontent.com/appliink/apptry/main/unnamed.webp" alt="GTA San Andreas Mod">
+        <h3>GTA San Andreas (Menu Mod)</h3>
+        <p>The legendary open-world classic! ⚡ This version comes with a powerful <b>Menu Mod</b> giving you cheats, unlimited options, and full control of the game.</p>
+        <a class="download-btn" href="https://installchecker.com/cl/i/5ne7o1" target="_blank">Download</a>
       </div>
 
     </div>
