--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Best Deals — Affiliate Hub</title>
+  <title>Best Deals — BOX WIN </title>
   <meta name="description" content="Discover top deals and products through our affiliate partners. Trusted reviews, honest recommendations, and exclusive discounts!">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -113,8 +113,8 @@ footer {
 <body>
   <header>
     <h1>Best Deals & Exclusive Offers</h1>
-    <p>Find hand-picked affiliate products and save big today</p>
+    <p>Get the best product at the best price and save big today</p>
   </header>  <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search products..." onkeyup="filterProducts()" />
   </div>  <main class="grid" id="productGrid"></main>  <footer>
-    © 2025 Affiliate Hub. All rights reserved. <br>
+    © 2025 BOX WIN . All rights reserved. <br>
