--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html><html lang="en">
+!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Best Deals — BOX WIN </title>
+  <title>Best Deals — Affiliate Hub</title>
   <meta name="description" content="Discover top deals and products through our affiliate partners. Trusted reviews, honest recommendations, and exclusive discounts!">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -28,93 +29,160 @@
       color: white;
     }
     header h1 { margin: 0; font-size: 2rem; }
-    header p { margin: .3rem 0 0; color: #dbeafe; }.search-bar {
-  text-align: center;
-  margin: 1.5rem auto;
-}
-.search-bar input {
-  width: 80%;
-  max-width: 400px;
-  padding: 0.8rem;
-  border-radius: 8px;
-  border: 1px solid #1e40af;
-  background: var(--card);
-  color: var(--text);
-}
+    header p { margin: .3rem 0 0; color: #dbeafe; }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 1.5rem;
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 1rem 2rem;
-}
-.card {
-  background: var(--card);
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  display: flex;
-  flex-direction: column;
-  transition: transform .2s ease, box-shadow .2s ease;
-}
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-}
-.card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-.card-content {
-  padding: 1rem;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-.card-content h3 {
-  margin: 0 0 0.5rem;
-  font-size: 1.1rem;
-  color: white;
-}
-.card-content p {
-  flex: 1;
-  margin: 0 0 1rem;
-  font-size: 0.95rem;
-  color: var(--muted);
-}
-.price {
-  font-weight: bold;
-  color: var(--accent);
-  margin-bottom: 1rem;
-}
-.card-content a {
-  text-decoration: none;
-  background: var(--accent);
-  color: white;
-  text-align: center;
-  padding: 0.7rem;
-  border-radius: 8px;
-  transition: background .2s ease;
-}
-.card-content a:hover { background: #1d4ed8; }
+    .search-bar {
+      text-align: center;
+      margin: 1.5rem auto;
+    }
+    .search-bar input {
+      width: 80%;
+      max-width: 400px;
+      padding: 0.8rem;
+      border-radius: 8px;
+      border: 1px solid #1e40af;
+      background: var(--card);
+      color: var(--text);
+    }
 
-footer {
-  text-align: center;
-  padding: 2rem 1rem;
-  color: var(--muted);
-  background: #111827;
-}
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 1rem 2rem;
+    }
+    .card {
+      background: var(--card);
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      display: flex;
+      flex-direction: column;
+      transition: transform .2s ease, box-shadow .2s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    }
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .card-content {
+      padding: 1rem;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+    .card-content h3 {
+      margin: 0 0 0.5rem;
+      font-size: 1.1rem;
+      color: white;
+    }
+    .card-content p {
+      flex: 1;
+      margin: 0 0 1rem;
+      font-size: 0.95rem;
+      color: var(--muted);
+    }
+    .price {
+      font-weight: bold;
+      color: var(--accent);
+      margin-bottom: 1rem;
+    }
+    .card-content a {
+      text-decoration: none;
+      background: var(--accent);
+      color: white;
+      text-align: center;
+      padding: 0.7rem;
+      border-radius: 8px;
+      transition: background .2s ease;
+    }
+    .card-content a:hover { background: #1d4ed8; }
 
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      color: var(--muted);
+      background: #111827;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Best Deals & Exclusive Offers</h1>
-    <p>Get the best product at the best price and save big today</p>
-  </header>  <div class="search-bar">
+    <p>Find hand-picked affiliate products and save big today</p>
+  </header>
+
+  <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search products..." onkeyup="filterProducts()" />
-  </div>  <main class="grid" id="productGrid"></main>  <footer>
-    © 2025 BOX WIN . All rights reserved. <br>
+  </div>
+
+  <main class="grid" id="productGrid"></main>
+
+  <footer>
+    © 2025 Affiliate Hub. All rights reserved. <br>
+    This site contains affiliate links; we may earn a commission when you buy through them.
+  </footer>
+
+  <script>
+    const PRODUCTS = [
+      {
+        title: "Noise Cancelling Headphones",
+        description: "Experience superior sound quality and block out distractions.",
+        price: "$89.99",
+        image: "https://images.unsplash.com/photo-1580894732444-8ecded7900f0?auto=format&fit=crop&w=800&q=80",
+        affiliate: "https://amzn.to/affiliate-headphones"
+      },
+      {
+        title: "Smart Fitness Watch",
+        description: "Track your steps, heart rate, and workouts with precision.",
+        price: "$129.99",
+        image: "https://images.unsplash.com/photo-1603791452906-bb9b9a5b0e3b?auto=format&fit=crop&w=800&q=80",
+        affiliate: "https://amzn.to/affiliate-watch"
+      },
+      {
+        title: "Ergonomic Office Chair",
+        description: "Designed for all-day comfort and productivity.",
+        price: "$199.00",
+        image: "https://images.unsplash.com/photo-1616627987936-1d9d0b05d7b4?auto=format&fit=crop&w=800&q=80",
+        affiliate: "https://amzn.to/affiliate-chair"
+      },
+      {
+        title: "4K Ultra HD Monitor",
+        description: "Vivid visuals for gaming, work, or entertainment.",
+        price: "$299.00",
+        image: "https://images.unsplash.com/photo-1587202372775-a5fc58ef9e7d?auto=format&fit=crop&w=800&q=80",
+        affiliate: "https://amzn.to/affiliate-monitor"
+      }
+    ];
+
+    const grid = document.getElementById('productGrid');
+    function renderProducts(list) {
+      grid.innerHTML = list.map(p => `
+        <div class="card">
+          <img src="${p.image}" alt="${p.title}">
+          <div class="card-content">
+            <h3>${p.title}</h3>
+            <p>${p.description}</p>
+            <div class="price">${p.price}</div>
+            <a href="${p.affiliate}" target="_blank" rel="nofollow noopener noreferrer">View on Store</a>
+          </div>
+        </div>
+      `).join('');
+    }
+
+    function filterProducts() {
+      const q = document.getElementById('searchInput').value.toLowerCase();
+      const filtered = PRODUCTS.filter(p => p.title.toLowerCase().includes(q) || p.description.toLowerCase().includes(q));
+      renderProducts(filtered);
+    }
+
+    renderProducts(PRODUCTS);
+  </script>
+</body>
+</html>
