--- a/index.html
+++ b/index.html
@@ -332,12 +332,12 @@
 const products = [
   {
     id: 'p1',
-    title: 'Vitamin C Glow Serum',
+    title: 'mitolyn',
     description: 'Brightening serum for radiant skin — 30ml. Clinically-inspired ingredients.',
     category: 'Health & Beauty',
-    price: '$19.99',
+    price: '$49',
     image: 'https://images.unsplash.com/photo-1600180758890-2be7b0c7efbb?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=5d7b6b8e7f46aeb1a9e7b5b2d8bcf4f4',
-    affiliate_link: 'https://www.example-affiliate.com/track?product=vitc' // replace with your ClickBank link
+    affiliate_link: 'https://dce4d8skzl2w5rejpfq70g1zas.hop.clickbank.net' // replace with your ClickBank link
   },
   {
     id: 'p2',
