--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ const products = [
   {
     id: 'p1',
     title: 'mitolyn',
-    description: 'Brightening serum for radiant skin — 30ml. Clinically-inspired ingredients.',
+    description: 'Mitolyn is a dietary supplement formulated to support mitochondrial health, boost energy levels, and promote healthy weight management by enhancing cellular metabolism..',
     category: 'Health & Beauty',
     price: '$49',
     image: 'https://images.unsplash.com/photo-1600180758890-2be7b0c7efbb?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=5d7b6b8e7f46aeb1a9e7b5b2d8bcf4f4',
