--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ const products = [
     description: 'Mitolyn is a dietary supplement formulated to support mitochondrial health, boost energy levels, and promote healthy weight management by enhancing cellular metabolism..',
     category: 'Health & Beauty',
     price: '$49',
-    image: 'https://images.unsplash.com/photo-1600180758890-2be7b0c7efbb?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=5d7b6b8e7f46aeb1a9e7b5b2d8bcf4f4',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/573396.jpg',
     affiliate_link: 'https://dce4d8skzl2w5rejpfq70g1zas.hop.clickbank.net' // replace with your ClickBank link
   },
   {
