--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@ const products = [
   },
   {
     id: 'p2',
-    title: 'Travel Organizer Bag - Compact',
-    description: 'Keep your travel essentials tidy. TSA-friendly compartments.',
-    category: 'Travel',
-    price: '$24.50',
+    title: 'Moon Elixir',
+    description: 'The Ancient “MoonElixir” Ritual is a natural approach designed to support feminine thyroid balance, boost energy, and restore hormonal harmony through time-honored herbal and lunar-inspired practices.',
+    category: 'Health & Beauty',
+    price: '$49',
     image: 'https://images.unsplash.com/photo-1541534401786-0b6f2b9f13f5?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=8f3ae8b3e4b970d7b3f6e2b3c2a9d0c6',
-    affiliate_link: 'https://www.example-affiliate.com/track?product=travelbag'
+    affiliate_link: 'https://36391j0f7gowarblrxu-ncqeme.hop.clickbank.net'
   },
   {
     id: 'p3',
