--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ const products = [
     description: 'The Ancient “MoonElixir” Ritual is a natural approach designed to support feminine thyroid balance, boost energy, and restore hormonal harmony through time-honored herbal and lunar-inspired practices.',
     category: 'Health & Beauty',
     price: '$49',
-    image: 'https://images.unsplash.com/photo-1541534401786-0b6f2b9f13f5?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=8f3ae8b3e4b970d7b3f6e2b3c2a9d0c6',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/9b99a6ba-314d-4150-a6fe-0368095a788c.png',
     affiliate_link: 'https://36391j0f7gowarblrxu-ncqeme.hop.clickbank.net'
   },
   {
