Remove affiliate marketing message from footer
Removed affiliate marketing message from footer.

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
   <footer>
     <div style="font-weight:800;font-size:18px">© <span id="year"></span> BoxWin</div>
-    <div class="small">Made for affiliate marketing — add your ClickBank or partner links to product entries.</div>
+    <div class="small">  </div>
   </footer>
 
 <script>
