Update hero subtitle and remove shipping badge text

--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
     <section class="hero" aria-labelledby="heroTitle">
       <div>
         <h2 id="heroTitle">Discover Amazing Products</h2>
-        <p id="heroSubtitle">Curated deals from ClickBank and other affiliate partners — search, filter, and buy with confidence.</p>
+        <p id="heroSubtitle">BoxWin is your go-to destination for discovering top-rated products and unbeatable deals across every category..</p>
       </div>
       <div class="actions">
         <button class="btn btn-primary" id="heroCTA">Browse Trending</button>
-        <div class="muted" style="margin-left:auto">Free shipping badges shown where available</div>
+        <div class="muted" style="margin-left:auto">       </div>
       </div>
     </section>
 
