Replace product details for a dog training course

--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@ const products = [
   },
   {
     id: 'p3',
-    title: "Men's Classic Leather Belt",
-    description: 'Premium leather belt for everyday wear. Sizes S-XL.',
-    category: "Men's Style",
-    price: '$29.00',
-    image: 'https://images.unsplash.com/photo-1519741491636-226b5c0200c4?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=cf4a0b3b5fd6f3c5b6d4f1a3b2c1e9a8',
-    affiliate_link: 'https://www.example-affiliate.com/track?product=belt'
+    title: "brain training for dogs",
+    description: 'Brain Training For Dogs is an online course by certified trainer Adrienne Farricelli that uses gentle, brain-stimulation games and step-by-step lessons to help dogs overcome behavioral problems and become more obedient. ',
+    category: " ",
+    price: '$67.00',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Brian_20251109_064205_0000.png',
+    affiliate_link: 'https://www.braintraining4dogs.com/get-btfd/?&shield=512487ye4fo53n1649r892p4zq'
   },
   {
     id: 'p4',
