Replace women's dress with Audifort product details

--- a/index.html
+++ b/index.html
@@ -359,12 +359,12 @@ const products = [
   },
   {
     id: 'p4',
-    title: 'Women\'s Summer Dress - Floral',
-    description: 'Lightweight and flowy summer dress in multiple colors.',
-    category: "Women's Fashion",
-    price: '$34.99',
-    image: 'https://images.unsplash.com/photo-1534850336045-c7b6f4d9d9b1?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=1a2b3c4d5e6f7a8b9c0d',
-    affiliate_link: 'https://www.example-affiliate.com/track?product=dress'
+    title: 'Audifort',
+    description: 'Audifort is a natural supplement designed to support ear health, reduce ringing, and promote clearer hearing.',
+    category: "Health & Beauty",
+    price: '$49',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Audifort-1.jpg',
+    affiliate_link: 'https://4de5di2c7cz78kc6z5u5tczu7n.hop.clickbank.net'
   },
   {
     id: 'p5',
