Replace Kids Plush Toy with Yu Sleep product

--- a/index.html
+++ b/index.html
@@ -368,12 +368,12 @@ const products = [
   },
   {
     id: 'p5',
-    title: 'Kids Plush Toy - Dino',
-    description: 'Soft, washable plush toy for toddlers. Machine-washable.',
-    category: 'Kids & Baby',
-    price: '$15.99',
-    image: 'https://images.unsplash.com/photo-1547506508-1b0e4f5f1f76?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=abcdef1234567890',
-    affiliate_link: 'https://www.example-affiliate.com/track?product=plushdino'
+    title: 'Yu sleep',
+    description: 'Yu Sleep is an all-natural, nano-enhanced drop formula that claims to help you fall asleep faster, stay asleep through the night without waking up at 3 AM, and wake up feeling truly refreshed. ',
+    category: 'Health & Beauty',
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Yu-Sleep-Reviews-2-compressed.jpg',
+    affiliate_link: 'https://1d34a9q9xdwz3u4i4cpzfm4sef.hop.clickbank.net'
   },
   {
     id: 'p6',
