--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@ const products = [
   },
   {
     id: 'p6',
-    title: 'Wireless Gaming Mouse',
-    description: 'Ergonomic RGB mouse with programmable buttons and high DPI.',
-    category: 'Tech & Gaming',
-    price: '$49.95',
-    image: 'https://images.unsplash.com/photo-1587202372775-7e2a66d9c6a6?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=11aa22bb33cc44dd55ee',
-    affiliate_link: 'https://www.example-affiliate.com/track?product=mouse'
+    title: 'BioDentex',
+    description: 'BioDentix is a natural supplement designed to support oral health by strengthening teeth, promoting healthier gums, and freshening breath.',
+    category: 'Health & Beauty',
+    price: '$49',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/download.png',
+    affiliate_link: 'https://5cf22j-g2ky57t17nhk6whjv1j.hop.clickbank.net'
   }
 ];
 
