--- a/index.html
+++ b/index.html
@@ -384,7 +384,17 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/download.png',
     affiliate_link: 'https://5cf22j-g2ky57t17nhk6whjv1j.hop.clickbank.net'
   }
-];
+  },
+  {
+    id: 'p7',
+    title: 'box win',
+    description: 'box win gift',
+    category: 'Health & Beauty',
+    price: '$0',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/ERROR%20404_20251110_013943_0000.png',
+    affiliate_link: 'https://appliink.github.io/apptry/'
+  }
+]
 
 // --- UI state & elements
 const productsGrid = document.getElementById('productsGrid');
