Fix affiliate link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ const products = [
     category: 'Health & Beauty',
     price: '$49',
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/download.png',
-    affiliate_link: 'https://5cf22j-g2ky57t17nhk6whjv1j.hop.clickbank.net'
+    affiliate_link: 'https://5cf22j-g2ky57t17nhk6whjv1j.hop.clickbank.net',
   },
   {
     id: 'p7',
