Update product image URL in index.html

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ const products = [
     description: 'BioDentix is a natural supplement designed to support oral health by strengthening teeth, promoting healthier gums, and freshening breath.',
     category: 'Health & Beauty',
     price: '$49',
-    image: 'https://raw.githubusercontent.com/appliink/apptry/main/download.png',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/ERROR%20404_20251110_171033_0000.png',
     affiliate_link: 'https://5cf22j-g2ky57t17nhk6whjv1j.hop.clickbank.net',
   },
   {
