Update product image URL in index.html

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ const products = [
     description: 'Mitolyn is a dietary supplement formulated to support mitochondrial health, boost energy levels, and promote healthy weight management by enhancing cellular metabolism..',
     category: 'Health & Beauty',
     price: '$49',
-    image: 'https://raw.githubusercontent.com/appliink/apptry/main/573396.jpg',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Mitolyn_20251110_190046_0000.png',
     affiliate_link: 'https://dce4d8skzl2w5rejpfq70g1zas.hop.clickbank.net' // replace with your ClickBank link
   },
   {
