Update product image URL for Audifort

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ const products = [
     description: 'Audifort is a natural supplement designed to support ear health, reduce ringing, and promote clearer hearing.',
     category: "Health & Beauty",
     price: '$49',
-    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Audifort-1.jpg',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Audifort_20251110_213926_0000.png',
     affiliate_link: 'https://4de5di2c7cz78kc6z5u5tczu7n.hop.clickbank.net'
   },
   {
