Update product details for biodynamix

--- a/index.html
+++ b/index.html
@@ -386,12 +386,12 @@ const products = [
   },
   {
     id: 'p7',
-    title: 'box win',
-    description: 'box win gift',
+    title: 'biodynamix',
+    description: 'BioDynamix is a dietary supplement formulated to support joint health, improve flexibility, and relieve stiffness and discomfort associated with aging.',
     category: 'Health & Beauty',
-    price: '$0',
-    image: 'https://raw.githubusercontent.com/appliink/apptry/main/ERROR%20404_20251110_013943_0000.png',
-    affiliate_link: 'https://appliink.github.io/apptry/'
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Bodynamix_20251111_023428_0000.png',
+    affiliate_link: 'https://2e088frh5iv7eoa6tetej7yndi.hop.clickbank.net'
   },
 ]
 
