Add ProstaVive product details to index.html

--- a/index.html
+++ b/index.html
@@ -393,6 +393,15 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/Bodynamix_20251111_023428_0000.png',
     affiliate_link: 'https://2e088frh5iv7eoa6tetej7yndi.hop.clickbank.net'
   },
+  {
+    id: 'p8',
+    title: 'ProstaVive',
+    description: 'ProstaVive is a natural dietary supplement designed to support prostate health, improve urinary flow, and enhance male vitality. ',
+    category: 'Health & Beauty',
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/ProstaVive_20251111_025359_0000.png',
+    affiliate_link: 'https://5437djt7ud106oeeu83a74dr8a.hop.clickbank.net'
+  },
 ]
 
 // --- UI state & elements
