--- a/index.html
+++ b/index.html
@@ -402,6 +402,15 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/ProstaVive_20251111_025359_0000.png',
     affiliate_link: 'https://5437djt7ud106oeeu83a74dr8a.hop.clickbank.net'
   },
+  {
+    id: 'p9',
+    title: 'provadent',
+    description: 'ProvaDent is a natural oral‑health supplement designed to support gum strength, freshen breath, and promote a balanced mouth microbiome. ',
+    category: 'Health & Beauty',
+    price: '$49',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Provadent_20251111_030708_0000.png',
+    affiliate_link: 'https://e76c592jxko51n9ew965pzso0w.hop.clickbank.net'
+  },
 ]
 
 // --- UI state & elements
