Add Gluco6 product details to index.html

--- a/index.html
+++ b/index.html
@@ -411,6 +411,15 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/Provadent_20251111_030708_0000.png',
     affiliate_link: 'https://e76c592jxko51n9ew965pzso0w.hop.clickbank.net'
   },
+  {
+    id: 'p10',
+    title: 'Gluco6',
+    description: 'Gluco6 is a plant‑based supplement designed to support healthy blood sugar levels and glucose metabolism. ',
+    category: 'Health & Beauty',
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Gluco_20251111_031604_0000.png',
+    affiliate_link: 'https://4a850eyb3o293uc5znrahw4wa7.hop.clickbank.net'
+  },
 ]
 
 // --- UI state & elements
