Add Pineal Guardian product details to index.html

--- a/index.html
+++ b/index.html
@@ -420,6 +420,15 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/Gluco_20251111_031604_0000.png',
     affiliate_link: 'https://4a850eyb3o293uc5znrahw4wa7.hop.clickbank.net'
   },
+  {
+    id: 'p11',
+    title: 'pineal Guardian',
+    description: 'Pineal Guardian is a natural-formula supplement designed to support the health and function of the pineal gland, promote mental clarity, and improve sleep quality. ',
+    category: 'Health & Beauty',
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Pineal%20guardian_20251111_033534_0000.png',
+    affiliate_link: 'https://e8064ape-b14cm9hmdp81hulft.hop.clickbank.net'
+  },
 ]
 
 // --- UI state & elements
