Add new product 'Finessa' to product list
Added a new product 'Finessa' with details including description, category, price, image, and affiliate link.

--- a/index.html
+++ b/index.html
@@ -429,6 +429,15 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/Pineal%20guardian_20251111_033534_0000.png',
     affiliate_link: 'https://e8064ape-b14cm9hmdp81hulft.hop.clickbank.net'
   },
+  {
+    id: 'p12',
+    title: 'Finessa',
+    description: 'Finessa is a plant-based supplement designed to support digestive and liver health. It helps reduce bloating, improve nutrient absorption, and regulate digestion, promoting toxin elimination, better metabolism, and overall energy and wellness.',
+    category: 'Health & Beauty',
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Finessa_20251111_035447_0000.png',
+    affiliate_link: 'https://e87459-92cu39p35yjphv39y0f.hop.clickbank.net'
+  },
 ]
 
 // --- UI state & elements
