--- a/index.html
+++ b/index.html
@@ -438,6 +438,15 @@ const products = [
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/Finessa_20251111_035447_0000.png',
     affiliate_link: 'https://e87459-92cu39p35yjphv39y0f.hop.clickbank.net'
   },
+  {
+    id: '13',
+    title: 'Quietum Plus',
+    description: 'Quietum Plus is a natural dietary supplement designed to support ear health and improve hearing clarity by nourishing auditory nerves, reducing inflammation, and enhancing blood flow to the ears.',
+    category: 'Health & Beauty',
+    price: '$49',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Quietum%20Plus_20251111_040553_0000.png',
+    affiliate_link: 'https://92a4a8pjzmt7an3h55pi2b-l7n.hop.clickbank.net'
+  },
 ]
 
 // --- UI state & elements
