Add new product 'Nagano Tonic' and update ID format

--- a/index.html
+++ b/index.html
@@ -439,13 +439,22 @@ const products = [
     affiliate_link: 'https://e87459-92cu39p35yjphv39y0f.hop.clickbank.net'
   },
   {
-    id: '13',
+    id: 'p13',
     title: 'Quietum Plus',
     description: 'Quietum Plus is a natural dietary supplement designed to support ear health and improve hearing clarity by nourishing auditory nerves, reducing inflammation, and enhancing blood flow to the ears.',
     category: 'Health & Beauty',
     price: '$49',
     image: 'https://raw.githubusercontent.com/appliink/apptry/main/Quietum%20Plus_20251111_040553_0000.png',
     affiliate_link: 'https://92a4a8pjzmt7an3h55pi2b-l7n.hop.clickbank.net'
+  },
+  {
+    id: 'p14',
+    title: 'Nagano Tonic',
+    description: 'Nagano Tonic is a natural‑form supplement designed to support metabolism, boost energy, reduce cravings, and improve digestion by blending plant‑based extracts like green tea (EGCG), ashwagandha, and bitter melon. ',
+    category: 'Health & Beauty',
+    price: '$39',
+    image: 'https://raw.githubusercontent.com/appliink/apptry/main/Nagano%20tonic_20251111_041804_0000.png',
+    affiliate_link: 'https://cade9j-j0kv7dlbdnqt7tz5x0b.hop.clickbank.net'
   },
 ]
 
